add Calculator class