@@ -2,7 +2,6 @@ package s1_08_lambdas_lvl2;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ListFilter {
     public static List<String> doggyNames = Arrays.asList("Yue", "Happy", "Aki", "Chusky", "Leona", "Archibald");
@@ -11,8 +10,7 @@ public class ListFilter {
     public static List<String> filterStringsFirstCharAndLength(List<String> list) {
         System.out.println("Names with 3 characters and start with 'A':");
         return list.stream()
-                .filter(dogName -> dogName.startsWith("A") && dogName.length() == 3)
-                .map(String::toUpperCase)
-                .collect(Collectors.toList());
+                .filter(dogName -> dogName.toLowerCase().startsWith("a") && dogName.length() == 3)
+                .toList();
     }
 }
